# rag-system

./: .gitignore  README.md  main.py  notes  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
VectorStore/chunkers/: __init__.py  fixed.py
VectorStore/embedders/: sentence_trans.py
VectorStore/loaders/: __init__.py  text.py
VectorStore/stores/: faiss.py
rag/core/: interfaces.py  models.py
rag/generation/: __init__.py  gpt.py  ollama.py
rag/ingestion/chunkers/: fixed.py
rag/ingestion/embedders/: __init__.py  sentence_trans.py
rag/ingestion/loaders/: __init__.py  text.py
rag/pipeline/: __init__.py  evaluation.py  generation.py  ingestion.py  query.py  reranker.py
rag/stores/: __init__.py  bm25.py  faiss.py  hybrid.py
utils/: db.py  hashing.py
